--- a/templates/User Panel Page/index.html
+++ b/templates/User Panel Page/index.html
@@ -58,7 +58,7 @@
           <div class="row">
             <div class="col-12 col-md-6 col-lg-4 gy-3">
               <div class="card">
-                <div class="card-title mt-3 fs-3 fw-bold text-center">عنوان آزمون</div>
+                <div class="card-title mt-3 fs-3 fw-bold text-center">آزمون آکنباخ</div>
                 <div class="card-body text-start">
                   <div class="row">
                     <div class="col">
@@ -72,7 +72,7 @@
                     <div class="col">
                       <p>
                         <span class="titles">تعداد سوالات:</span>
-                        <span class="ms-3 fs-5">50</span>
+                        <span class="ms-3 fs-5">114</span>
                       </p>
                     </div>
                   </div>
@@ -99,17 +99,14 @@
                   <div class="row">
                     <div class="col">
                       <p>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                        Dignissimos autem deleniti voluptate cum accusamus eaque
-                        consectetur minus necessitatibus repudiandae
-                        consequatur?
+                        آزمون آکنباخ برای ارزیابی مشکلات رفتاری و هیجانی کودکان طراحی شده است. این آزمون شامل 50 سوال است که هر یک از آن‌ها دو امتیاز دارد. نمره کلی آزمون 100 است.
                       </p>
                     </div>
                   </div>
                   
                   <div class="row mt-3">
                     <div class="col text-center">
-                      <a href="{{ url_for('static', filename='start-quiz-info/HTML/startquiz.html') }}"><button class="btn w-75 quiz-btn" >شروع آزمون</button></a>
+                      <a href="{{ url_for('take_akhenbach') }}"><button class="btn w-75 quiz-btn">شروع آزمون</button></a>
                     </div>
                   </div>
                 </div>
