--- a/templates/Home Page/homepage.html
+++ b/templates/Home Page/homepage.html
@@ -40,17 +40,9 @@
               <li class="nav-item mx-2 dropdown">
                 <a href="" class="nav-link dropdown-toggle text-white" data-toggle="dropdown">دسترسی سریع</a>
                 <div class="dropdown-menu">
-                  <a href="#quizes" class="dropdown-item"> آزمون ها</a>
+                  <a href="#akhenbach" class="dropdown-item"> آزمون آکنباخ</a>
                   <a href="#abuat" class="dropdown-item"> درباره ما</a>
                   <a href="#contact" class="dropdown-item">ارتباط با ما</a>
-                </div>
-              </li>
-              <li class="nav-item mx-2 dropdown">
-                <a href="" class="nav-link dropdown-toggle text-white" data-toggle="dropdown">آزمون های ما</a>
-                <div class="dropdown-menu">
-                  <a href="" class="dropdown-item"> آزمون یک</a>
-                  <a href="" class="dropdown-item">آزمون دو</a>
-                  <a href="" class="dropdown-item"> آزمون سه</a>
                 </div>
               </li>
               <li class="nav-item mx-2">
@@ -58,9 +50,18 @@
               </li>
             </ul>
           </div>
-          <button type="button" class="btn mt-1 mt-md-4 reg-btn" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-            ورود / ثبت نام
-          </button>
+          <!-- Check if the user is authenticated -->
+          {% if current_user.is_authenticated %}
+            <!-- If the user is logged in, show the user panel button -->
+            <a href="{{ url_for('user_panel') }}" class="btn mt-1 mt-md-4 reg-btn text-white">
+              سلام، {{ current_user.username }}
+            </a>
+          {% else %}
+            <!-- If the user is not logged in, show the login/signup button -->
+            <button type="button" class="btn mt-1 mt-md-4 reg-btn" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+              ورود / ثبت نام
+            </button>
+          {% endif %}
         </nav>
       </section>
       <!-- Navbar END -->
@@ -106,163 +107,30 @@
     <!-- -----------------------banner-start-------------------- -->
     <!-- --------------------------------------------Header END --------------------------------------- -->
 
-    <!-------------------------------------------- section-1-Cards---------------------------------------------- -->
-    <div id="quizes" class="container mb-5 mt-5">
-      <h2 class="text-center m-4">SITE SERVICES NAME</h2>
+    <!-- Akhenbach Test Section START -->
+    <div id="akhenbach" class="container mb-5 mt-5">
+      <h2 class="text-center m-4">آزمون آکنباخ</h2>
 
       <div class="row text-white">
-        <!-- -------------------------------the big card-------------------------------- -->
-        <div class="col-12 col-md-4 gy-3">
-          <div class="demo-wrap card services-card1 h-100 rounded-4">
-            <div class="card-body demo-content">
-              <h2 class="card-title mb-5">لیست آزمون های ما</h2>
-              <div class="card-text">
-                <ul class="list">
-                  <li>آزمون 1</li>
-                  <li>آزمون 2</li>
-                  <li>آزمون 3</li>
-                  <li>آزمون 4</li>
-                </ul>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- -------------------------------the small cards-------------------------------- -->
-
-        <div class="col-12 col-md-8">
-          <div class="row">
-            <div class="col-12 col-sm-6 gy-3">
-              <div class="demo-wrap card services-card2 rounded-4">
-                <div class="card-body demo-content">
-                  <h2 class="card-title">title</h2>
-                  <div class="card-text">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Officiis autem, ullam possimus quidem optio vel.
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="col gy-3">
-              <div class="card services-card3 rounded-4 demo-wrap">
-                <div class="card-body demo-content">
-                  <h2 class="card-title">title</h2>
-                  <div class="card-text">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Officiis autem, ullam possimus quidem optio vel.
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="col gy-3">
-              <div class="card services-card4 rounded-4 demo-wrap">
-                <div class="card-body demo-content">
-                  <h2 class="card-title">title</h2>
-                  <div class="card-text">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Officiis autem, ullam possimus quidem optio vel.
-                  </div>
-                </div>
-              </div>
-            </div>
-
-            <div class="col gy-3">
-              <div class="card services-card5 rounded-4 demo-wrap">
-                <div class="card-body demo-content">
-                  <h2 class="card-title">title</h2>
-                  <div class="card-text">
-                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                    Officiis autem, ullam possimus quidem optio vel.
-                  </div>
-                </div>
-              </div>
+        <div class="col-12">
+          <div class="card h-100 rounded-4 bg-dark">
+            <div class="card-body">
+              <h2 class="card-title mb-4 text-center">آزمون آکنباخ</h2>
+              <p class="card-text">
+                آزمون آکنباخ یکی از آزمون‌های معتبر و پرکاربرد در حوزه روانشناسی است که به ارزیابی رفتارهای کودکان و نوجوانان می‌پردازد. این آزمون شامل مجموعه‌ای از سوالات است که رفتارهای عاطفی، اجتماعی، و مشکلات رفتاری را مورد سنجش قرار می‌دهد. آزمون آکنباخ به روانشناسان و مشاوران کمک می‌کند تا وضعیت روانی و رفتاری افراد را به دقت بررسی کرده و برنامه‌های درمانی یا مشاوره‌ای مناسبی را پیشنهاد دهند.
+              </p>
+              <p class="card-text">
+                نتایج این آزمون به صورت پروفایل‌های فردی ارائه می‌شود که نقاط قوت و ضعف هر فرد را در حوزه‌های مختلف رفتاری و عاطفی نمایش می‌دهد. این ابزار ارزشمند به والدین، مربیان، و متخصصان روانشناسی کمک می‌کند تا درک بهتری از وضعیت روانی کودکان و نوجوانان داشته باشند و اقدامات موثری برای بهبود رفتارها و حل مشکلات احتمالی آنان انجام دهند.
+              </p>
+              <a class="btn bg-primary text-white w-100 mt-4" href="{{ url_for('take_akhenbach') }}" role="button">
+                شروع آزمون
+              </a>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <!-------------------------------------------- section-1-Cards-END---------------------------------------------- -->
-
-    <!-- Test Carts START -->
-    <div class="container text-center my-5 quize-cards-bg">
-      <h3 class="p-3 my-5">آزمون های ما</h3>
-      <section class="row">
-        <div class="col-lg-6 gy-4 d-flex position-relative justify-content-center">
-          <div class="card border-2 mr-5 w-75 gy-3">
-            <img src="{{ url_for('static', filename='images/health-brain-illustration-icon-template-free-vector.jpg') }}" class="" alt="..." />
-            <div class="card-body">
-              <h3 class="card-title p-4 mt-0 text-right">عنوان آزمون</h3>
-              <p class="card-text px-4 text-right">
-                لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با
-                استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله
-                در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد
-                نیاز
-              </p>
-              <button class="btn bg-primary text-white w-100" href="#" role="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                ورود
-              </button>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-6 gy-4 d-flex position-relative justify-content-center">
-          <div class="card ml-5 w-75">
-            <img src="{{ url_for('static', filename='images/health-brain-illustration-icon-template-free-vector.jpg') }}" class="" alt="..." />
-            <div class="card-body">
-              <h3 class="card-title p-4 mt-0 text-right">عنوان آزمون</h3>
-              <p class="card-text px-4 text-right">
-                لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با
-                استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله
-                در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد
-                نیاز
-              </p>
-              <button class="btn bg-primary text-white w-100" href="#" role="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                ورود
-              </button>
-            </div>
-          </div>
-        </div>
-      </section>
-      <section class="row">
-        <div class="col-lg-6 gy-4 d-flex position-relative justify-content-center">
-          <div class="card mr-5 w-75">
-            <img src="{{ url_for('static', filename='images/health-brain-illustration-icon-template-free-vector.jpg') }}" class="" alt="..." />
-            <div class="card-body">
-              <h3 class="card-title p-4 mt-0 text-right">عنوان آزمون</h3>
-              <p class="card-text px-4 text-right">
-                لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با
-                استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله
-                در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد
-                نیاز
-              </p>
-              <button class="btn bg-primary text-white w-100" href="#" role="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                ورود
-              </button>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-6 gy-4 d-flex position-relative justify-content-center">
-          <div class="card ml-5 w-75">
-            <img src="{{ url_for('static', filename='images/health-brain-illustration-icon-template-free-vector.jpg') }}" class="" alt="..." />
-            <div class="card-body">
-              <h3 class="card-title p-4 mt-0 text-right">عنوان آزمون</h3>
-              <p class="card-text px-4 text-right">
-                لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با
-                استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله
-                در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد
-                نیاز
-              </p>
-              <button class="btn bg-primary text-white w-100" href="#" role="button" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
-                ورود
-              </button>
-            </div>
-          </div>
-        </div>
-      </section>
-    </div>
-    <!-- Test Carts END -->
+    <!-- Akhenbach Test Section END -->
 
     <!-- Description START -->
     <div class="container-fluid description mt-4">
@@ -380,17 +248,7 @@
       </section>
 
       <section class="row p-3 d-flex align-items-center">
-        <!-- <div class="col-md-4">
-          <img src="{{ url_for('static', filename='images/Untitled-31.png') }}" alt="" class="d-none d-lg-block"/>
-        </div> -->
-        <div class="col-md-8">
-          <p>
-            لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با
-            استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در
-            ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و
-            کاربردهای متنوع با هدف بهبود ابزارهای کاربردی می باشد. کتابهای زیادی
-          </p>
-        </div>
+        <!-- (Optional additional content here) -->
       </section>
     </div>
     <!-- Abute END -->
@@ -405,7 +263,7 @@
           </h4>
           <ul class="list-unstyled">
             <li class="mt-3 p-2">
-              <a href="#quizes" class="dropdown-item"> آزمون ها</a>
+              <a href="#akhenbach" class="dropdown-item"> آزمون آکنباخ</a>
             </li>
             <li class="mt-3 p-2">مقالات و مجلات</li>
             <li class="mt-3 p-2">
@@ -417,12 +275,10 @@
         <div class="col-md-4 w-auto mr-5 p-3 pt-5">
           <h4 class="align-items-center d-flex">
             <i class="fa-sharp fa-solid fa-list-check fa-lg me-1 pe-2"></i>
-            آزمون ها
+            آزمون آکنباخ
           </h4>
           <ul class="list-unstyled">
-            <li class="mt-3 p-2">آزمون شماره یک</li>
-            <li class="mt-3 p-2">آزمون شماره دو</li>
-            <li class="mt-3 p-2">آزمون شماره سه</li>
+            <li class="mt-3 p-2"><a href="{{ url_for('take_akhenbach') }}" class="text-white">شروع آزمون</a></li>
           </ul>
         </div>
 
@@ -530,7 +386,8 @@
 
     <!-- Footer END -->
     <!-- Optional JavaScript -->
-    <!--Popper.js, then Bootstrap JS -->    <script>
+    <!--Popper.js, then Bootstrap JS -->
+    <script>
       window.onload = function() {
         const urlParams = new URLSearchParams(window.location.search);
         if (urlParams.has('open_modal')) {
