--- a/templates/User Panel Page/cattell_questions.html
+++ b/templates/User Panel Page/cattell_questions.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fa">
 <head>
     <meta charset="UTF-8" />
     <link rel="shortcut icon" type="x-icon" href="{{ url_for('static', filename='images/mind_9548035.png') }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>آزمون آخنباخ</title>
+    <title>آزمون کتل</title>
     <link
         href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
         rel="stylesheet"
@@ -46,7 +46,7 @@
             <!-- Loop through the questions -->
             {% for question in questions %}
             <div class="p-3 mb-4">
-                <span class="fs-3">سوال <span>{{ loop.index }}</span><span class="opacity-50">/113</span></span>
+                <span class="fs-3">سوال <span>{{ loop.index }}</span><span class="opacity-50">/184</span></span>
                 <div class="mt-3">
                     <p class="p-2">
                         <span>{{ question.question_text }}</span>
@@ -56,16 +56,16 @@
                 <!-- Answer options -->
                 <div class="my-4">
                     <div class="form-check">
-                        <input class="form-check-input" type="radio" name="{{ question.id }}" id="no_{{ question.id }}" value="no" required>
-                        <label class="form-check-label" for="no_{{ question.id }}">خیر</label>
+                        <input class="form-check-input" type="radio" name="{{ question.id }}" id="option1_{{ question.id }}" value="1" required>
+                        <label class="form-check-label" for="option1_{{ question.id }}">خیر</label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" type="radio" name="{{ question.id }}" id="sometimes_{{ question.id }}" value="sometimes">
-                        <label class="form-check-label"  for="sometimes_{{ question.id }}">بعضی مواقع</label>
+                        <input class="form-check-input" checked type="radio" name="{{ question.id }}" id="option2_{{ question.id }}" value="2">
+                        <label class="form-check-label" for="option2_{{ question.id }}">بین این دو</label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" checked type="radio"  name="{{ question.id }}" id="yes_{{ question.id }}" value="yes">
-                        <label class="form-check-label" for="yes_{{ question.id }}" >بلی</label>
+                        <input class="form-check-input" type="radio" name="{{ question.id }}" id="option3_{{ question.id }}" value="3">
+                        <label class="form-check-label" for="option3_{{ question.id }}">بله</label>
                     </div>
                 </div>
             </div>
