--- a/templates/User Panel Page/akhenbach_info.html
+++ b/templates/User Panel Page/akhenbach_info.html
@@ -11,6 +11,7 @@
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
       crossorigin="anonymous"
     />
+    
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
@@ -147,16 +148,17 @@
             />
           </div>
 
-        <div class="mb-3 col-sm-12 col-lg-3 col-md-3">
-            <label for="date" class="form-label">تاریخ تولد :</label>
+          <div class="mb-3 col-sm-12 col-lg-3 col-md-3">
+            <label for="birthdate" class="form-label">تاریخ تولد :</label>
             <input
-                type="date"
-                class="form-control"
-                id="date"
-                name="birthdate"
-                required
+              type="text"
+              class="form-control"
+              id="persianDate"
+              name="birthdate"
+              required
             />
-        </div>
+          </div>
+          
           <div class="mb-3 col-sm-12 col-lg-3 col-md-3">
             <label for="education" class="form-label"> تحصیلات :</label>
             <select name="education" id="education" class="form-select" required>
