--- a/templates/Admin Panel Page/adminhome.html
+++ b/templates/Admin Panel Page/adminhome.html
@@ -5,7 +5,9 @@
     <link rel="shortcut icon" type="x-icon" href="{{ url_for('static', filename='mind_9548035.png') }}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>داشبورد</title>
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
@@ -35,9 +37,6 @@
           <li  class="current_page">
             <a href="#dashboard"><i class="fa fa-home"></i><p class="d-inline m-2">خانه</p></a>
           </li>
-          <li>
-            <a href="{{ url_for('admin_quiz') }}"><i class="fa-solid fa-chart-simple"></i><p class="d-inline m-2">آزمون ها</p></a>
-          </li>
           <li><a href="{{ url_for('logout') }}"> <i class="fa-solid fa-arrow-right-from-bracket"></i><p class="d-inline m-2">خروج از حساب</p> </a></li>
         </ul>
       </div>
@@ -59,7 +58,7 @@
                                           <i class="lni lni-users card-icon"></i>
                                       </div>
                                       <div class="col text-center mt-3">
-                                          <p class="card-p">50</p>
+                                          <p class="card-p">{{user_count}}</p>
                                       </div>
                                   </div>
                                   <div class="row text-center">
@@ -70,22 +69,22 @@
                               </div>
                           </div>
                           <div class=" blur text-white mt-4">
-                              <div class=" text-start">
-                                  <div class="row ">
-                                      <div class="col text-center mt-2">
-                                          <i class="lni lni-hourglass card-icon"></i>
-                                      </div>
-                                      <div class="col text-center mt-2">
-                                          <p class="card-p">6</p>
-                                      </div>
-                                  </div>
-                                  <div class="row text-center">
-                                      <div class="col mt-2">
-                                          <p class="card-description">تعداد آزمون های فعال</p>
-                                      </div>
-                                  </div>
-                              </div>
-                          </div>
+                            <div class=" text-start">
+                                <div class="row ">
+                                    <div class="col text-center mt-3">
+                                        <i class="lni lni-notepad card-icon"></i>
+                                    </div>
+                                    <div class="col text-center mt-3">
+                                        <p class="card-p">{{finished_exams_count}}</p>
+                                    </div>
+                                </div>
+                                <div class="row ">
+                                    <div class="col text-center align-items-center ">
+                                        <p class="card-description">آزمون های تکمیل شده</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                       </div>
                   </div>
               </div>
@@ -99,33 +98,17 @@
                                           <i class="lni lni-question-circle card-icon"></i>
                                       </div>
                                       <div class="col text-center mt-3">
-                                          <p class="card-p">250</p>
+                                          <p class="card-p">{{exam_count}}</p>
                                       </div>
                                   </div>
                                   <div class="row text-center">
                                       <div class="col ">
-                                          <p class="card-description">تعداد کل سوالات</p>
+                                          <p class="card-description">تعداد کل ازمون ها</p>
                                       </div>
                                   </div>
                               </div>
                           </div>
-                          <div class=" blur text-white mt-4">
-                              <div class=" text-start">
-                                  <div class="row ">
-                                      <div class="col text-center mt-3">
-                                          <i class="lni lni-notepad card-icon"></i>
-                                      </div>
-                                      <div class="col text-center mt-3">
-                                          <p class="card-p">456</p>
-                                      </div>
-                                  </div>
-                                  <div class="row ">
-                                      <div class="col text-center align-items-center ">
-                                          <p class="card-description">آزمون های تکمیل شده</p>
-                                      </div>
-                                  </div>
-                              </div>
-                          </div>
+
                       </div>
                   </div>
               </div>
@@ -139,7 +122,7 @@
                                           <i class="lni lni-question-circle card-icon"></i>
                                       </div>
                                       <div class="col text-center mt-3">
-                                          <p class="card-p">250</p>
+                                          <p class="card-p">{{questions_count}}</p>
                                       </div>
                                   </div>
                                   <div class="row text-center">
@@ -149,108 +132,126 @@
                                   </div>
                               </div>
                           </div>
-                          <div class=" blur text-white mt-4">
-                              <div class=" text-start">
-                                  <div class="row ">
-                                      <div class="col text-center mt-3">
-                                          <i class="lni lni-notepad card-icon"></i>
-                                      </div>
-                                      <div class="col text-center mt-3">
-                                          <p class="card-p">456</p>
-                                      </div>
-                                  </div>
-                                  <div class="row ">
-                                      <div class="col text-center align-items-center ">
-                                          <p class="card-description">آزمون های تکمیل شده</p>
-                                      </div>
-                                  </div>
-                              </div>
-                          </div>
+
                       </div>
                   </div>
               </div>
               <div class="row">
-                  <div class="col-12 col-md-6 col-lg-4 g-5">
-                      <div class="card blur text-white z-100">
-                          <div class="card-title m-3 fs-3 fw-bold">عنوان آزمون</div>
-                          <div class="card-body text-start">
-                              <div class="row">
-                                  <div class="col">
-                                      <p>دسته بندی:</p>
-                                  </div>
-                              </div>
-                              <div class="row">
-                                  <div class="col">
-                                      <p>تعداد سوالات:</p>
-                                  </div>
-                              </div>
-                              <div class="row">
-                                  <div class="col">
-                                      <p>تعداد شرکت کنندگان:</p>
-                                  </div>
-                              </div>
-                              <div class="row">
-                                  <div class="col">
-                                      <a href="{{ url_for('static', filename='users/result.html') }}" class="go"><button class="btn cards-btns w-100">مشاهده نتایج</button></a>
-                                  </div>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-                  <div class="col-12 col-md-6 col-lg-4 g-5 z-100">
-                      <div class="card blur text-white">
-                          <div class="card-title m-3 fs-3 fw-bold">عنوان آزمون</div>
-                          <div class="card-body text-start">
-                              <div class="row">
-                                  <div class="col">
-                                      <p>دسته بندی:</p>
-                                  </div>
-                              </div>
-                              <div class="row">
-                                  <div class="col">
-                                      <p>تعداد سوالات:</p>
-                                  </div>
-                              </div>
-                              <div class="row">
-                                  <div class="col">
-                                      <p>تعداد شرکت کنندگان:</p>
-                                  </div>
-                              </div>
-                              <div class="row">
-                                  <div class="col">
-                                      <a href="{{ url_for('static', filename='users/result.html') }}" class="go"><button class="btn cards-btns w-100">مشاهده نتایج</button></a>
-                                  </div>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-                  <div class="col-12 col-md-6 col-lg-4 g-5">
-                      <div class="card blur text-white">
-                          <div class="card-title m-3 fs-3 fw-bold">عنوان آزمون</div>
-                          <div class="card-body text-start">
-                              <div class="row">
-                                  <div class="col">
-                                      <p>دسته بندی:</p>
-                                  </div>
-                              </div>
-                              <div class="row">
-                                  <div class="col">
-                                      <p>تعداد سوالات:</p>
-                                  </div>
-                              </div>
-                              <div class="row">
-                                  <div class="col">
-                                      <p>تعداد شرکت کنندگان:</p>
-                                  </div>
-                              </div>
-                              <div class="row">
-                                  <div class="col">
-                                      <a href="{{ url_for('static', filename='users/result.html') }}" class="go"><button class="btn cards-btns w-100">مشاهده نتایج</button></a>
-                                  </div>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
+                <div class="col-12 col-md-6 col-lg-4 g-5 z-100">
+                    <div class="card blur text-white">
+                        <div class="card-title m-3 fs-3 fw-bold">آزمون آخنباخ</div>
+                        <div class="card-body text-start">
+                            <div class="row">
+                                <div class="col">
+                                    <p>تعداد شرکت کنندگان: {{ akhenbach_exam_users|length }}</p>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col">
+                                    <button class="btn cards-btns w-100" data-bs-toggle="modal" data-bs-target="#akhenbachModal">مشاهده کاربران</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+                <div class="col-12 col-md-6 col-lg-4 g-5 z-100">
+                    <div class="card blur text-white">
+                        <div class="card-title m-3 fs-3 fw-bold">آزمون کتل</div>
+                        <div class="card-body text-start">
+                            <div class="row">
+                                <div class="col">
+                                    <p>تعداد شرکت کنندگان: {{ cattell_exam_users|length }}</p>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col">
+                                    <button class="btn cards-btns w-100" data-bs-toggle="modal" data-bs-target="#cattellModal">مشاهده کاربران</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                
+<!-- Akhenbach Modal -->
+<div class="modal fade" id="akhenbachModal" tabindex="-1" aria-labelledby="akhenbachModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="akhenbachModalLabel">کاربران شرکت کننده در آزمون آکنباخ</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="بستن"></button>
+            </div>
+            <div class="modal-body">
+                <div class="accordion" id="akhenbachAccordion">
+                    {% for result in akhenbach_exam_users %}
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingAkhenbach{{ result.id }}">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseAkhenbach{{ result.id }}" aria-expanded="false" aria-controls="collapseAkhenbach{{ result.id }}">
+                                    {{ result.user.username }}
+                                </button>
+                            </h2>
+                            <div id="collapseAkhenbach{{ result.id }}" class="accordion-collapse collapse" aria-labelledby="headingAkhenbach{{ result.id }}" data-bs-parent="#akhenbachAccordion">
+                                <div class="accordion-body">
+                                    <!-- Display Gender and Age -->
+                                    <p><strong>جنسیت:</strong> {{ result.gender }}</p>
+                                    <p><strong>سن:</strong> {{ result.age }}</p>
+                                    
+                                    <!-- Display the Exam Results (interpretation) -->
+                                    <p>{{ result.interpretation | safe }}</p>
+                                </div>
+                            </div>
+                        </div>
+                    {% endfor %}
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">بستن</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Cattell Modal -->
+<div class="modal fade" id="cattellModal" tabindex="-1" aria-labelledby="cattellModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-lg">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="cattellModalLabel">کاربران شرکت کننده در آزمون کتل</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="بستن"></button>
+            </div>
+            <div class="modal-body">
+                <div class="accordion" id="cattellAccordion">
+                    {% for result in cattell_exam_users %}
+                        <div class="accordion-item">
+                            <h2 class="accordion-header" id="headingCattell{{ result.id }}">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseCattell{{ result.id }}" aria-expanded="false" aria-controls="collapseCattell{{ result.id }}">
+                                    {{ result.user.username }}
+                                </button>
+                            </h2>
+                            <div id="collapseCattell{{ result.id }}" class="accordion-collapse collapse" aria-labelledby="headingCattell{{ result.id }}" data-bs-parent="#cattellAccordion">
+                                <div class="accordion-body">
+                                    <!-- Display Gender and Age -->
+                                    <p><strong>جنسیت:</strong> {{ result.gender }}</p>
+                                    <p><strong>سن:</strong> {{ result.age }}</p>
+                                    
+                                    <!-- Display the Exam Results (interpretation) -->
+                                    <p>{{ result.interpretation | safe }}</p>
+                                </div>
+                            </div>
+                        </div>
+                    {% endfor %}
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">بستن</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+
+
+                
               </div>
           </div>
         </div>
