--- a/templates/User Panel Page/akhenbach_questions.html
+++ b/templates/User Panel Page/akhenbach_questions.html
@@ -11,6 +11,7 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
         crossorigin="anonymous"
     />
+    
     <script
         src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
         integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
@@ -64,7 +65,7 @@
                         <label class="form-check-label"  for="sometimes_{{ question.id }}">بعضی مواقع</label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" checked type="radio"  name="{{ question.id }}" id="yes_{{ question.id }}" value="yes">
+                        <input class="form-check-input"  type="radio"  name="{{ question.id }}" id="yes_{{ question.id }}" value="yes">
                         <label class="form-check-label" for="yes_{{ question.id }}" >بلی</label>
                     </div>
                 </div>
