--- a/templates/User Panel Page/cattell_questions.html
+++ b/templates/User Panel Page/cattell_questions.html
@@ -60,7 +60,7 @@
                         <label class="form-check-label" for="option1_{{ question.id }}">خیر</label>
                     </div>
                     <div class="form-check">
-                        <input class="form-check-input" checked type="radio" name="{{ question.id }}" id="option2_{{ question.id }}" value="2">
+                        <input class="form-check-input"  type="radio" name="{{ question.id }}" id="option2_{{ question.id }}" value="2">
                         <label class="form-check-label" for="option2_{{ question.id }}">بین این دو</label>
                     </div>
                     <div class="form-check">
